--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/assignments
+MONGODB_URI=mongodb://localhost:27017/shareit
 PORT=3000
 TOKEN_SECRET = shlomiandelad
 TOKEN_EXPIRES = '1h' # For testing change this to 3s
