--- a/back/.env
+++ b/back/.env
@@ -3,3 +3,4 @@ PORT=3000
 TOKEN_SECRET = shlomiandelad
 TOKEN_EXPIRES = '1h' # For testing change this to 3s
 REFRESH_TOKEN_EXPIRES = '7d'
+LOCAL_IMAGE_PATH = '../front/public/images'
