--- a/back/.env
+++ b/back/.env
@@ -4,3 +4,4 @@ TOKEN_SECRET = shlomiandelad
 TOKEN_EXPIRES = '1h' # For testing change this to 3s
 REFRESH_TOKEN_EXPIRES = '7d'
 LOCAL_IMAGE_PATH = '../front/public/images'
+GOOGLE_CLIENT_ID='421352797212-aigvb1ve9udvpcp08uivakeku29nj3kp.apps.googleusercontent.com'
