--- a/back/package.json
+++ b/back/package.json
@@ -13,12 +13,14 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
