--- a/front/package.json
+++ b/front/package.json
@@ -15,8 +15,11 @@
     "primereact": "^10.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.22.3",
-    "react-uploader": "^3.43.0"
+    "react-uploader": "^3.43.0",
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
@@ -30,7 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
