--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "prop-types": "^15.8.1",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.22.4"
